java: add Java Platform Module System chapter, fill long-reserved T-116
02-java was missing JPMS coverage, one of three gaps CLAUDE.md names
explicitly. T-116 was already a real, correctly-reserved Master Topic
Register slot for this exact topic (never written) -- it had briefly,
mistakenly held java.time API earlier today before that collision was
caught and fixed onto T-2400.

Real demo (two independent module graphs, pure JDK): a real
InaccessibleObjectException under exports-only, fixed by a qualified
opens; ServiceLoader resolving a provider module the consumer never
requires, while a direct import of that provider's internal package
still fails to compile with a real javac error -- proving the SPI
exception is narrowly scoped, not a general encapsulation hole.

JEP 396/403's two-step --illegal-access enforcement change verified
live via WebFetch against the real JEP text before citing.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>